#CMakeLists.txt podprojektu Program
project(Program)

#ustaw we własnej zmiennej SOURCE_FILES zbiór plików źródłowych projektu
set(SOURCE_FILES
        src/main.cpp src/Application.cpp include/Application.h)

#włącz powyższy zbiór plików do zbudowania programu wykonywalnego Program
add_executable(Program ${SOURCE_FILES})

#dołącz katalog include podprojektu Program do globalnej listy. Dzięki temu każdy inny podprojekt będzie ten katalog "widział"
target_include_directories(Program PUBLIC include)

#Określenie zależności pomiędzy projektami Program i Biblioteka
target_link_libraries(Program Biblioteka)
